[tool:pytest]
testpaths = test/
python_classes = test_*

;[build_sphinx]
;source-dir = docs/
;build-dir = docs/_build
;all_files = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N806, N802, N801, N803, E741, E742, E722
max-line-length = 79

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True
include = *grpc_proto_validator/*
source = grpc_proto_validator,test

[coverage:paths]
source =
    grpc_proto_validator
    .tox/*/lib/python*/site-packages/grpc_proto_validator

[coverage:report]
omit =
    */python?.?/*
    */site-packages/*
    *grpc_proto_validator/proto/*
